--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Aqui va el titulo de la página</h1>    
+    <h1>Aqui va el titulo de la página</h1>  
+    <p>Esto es un parrafo</p>
 </body>
 </html>
 
