--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Aqui va el titulo de la página</h1>  
     <p>Esto es un parrafo</p>
+    <p>Esto es el segundo parrafo</p>
 </body>
 </html>
 
