Text add from branch1

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <p>Parrafo 1 de la rama 3</p>
 
     <p>Este es un parrafo desde el proyecto clonado FORK</p>
+
+    <p>Texto agregado de la rama1</p>
 </body>
 </html>
 
